# SysDC

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yaml  run-dev.sh  run.sh
.cargo/: config.toml
.github/workflows/: check.yml  core_check.yml  release.yml
.src/cli/: exec.rs
.tools/json/: Cargo.toml
.tools/view/: Makefile  package-lock.json  package.json  tsconfig.json
cli/: Cargo.toml  README.md
cli/src/: cli.rs  plugin.rs
cliapp/: .gitignore  Cargo.toml  Makefile  README.md
cliapp/src/: cli.rs  main.rs
cliapp/src/cli/: parse.rs  run.rs
cliapp/tool_runner/: .gitignore  Makefile  package-lock.json  package.json  tsconfig.json
cliapp/tool_runner/public/: index.html
cliapp/tool_runner/src/: App.tsx
cliapp/tool_runner/src-tauri/: Cargo.toml  tauri.conf.json
cliapp/tool_runner/src-tauri/src/: command.rs  lib.rs  main.rs
core/: Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
core/src/: check.rs  lib.rs  parse.rs  structure.rs  token.rs  types.rs
core/src/check/: matches.rs
core/tests/: example.rs
doc/: README.md  config.toml
doc/content/: _index.md
editor/front/: Dockerfile  Makefile  package-lock.json  package.json
example/: box.def  sysdc.def
example/box/: box.def
example/compiler/: compiler.def  parser.def  std.def  structure.def  tokenizer.def
example/logger/: logger.def  std.def
example/user/: user.def
parser/: Cargo.toml  README.md
parser/src/: check.rs  error.rs  lib.rs  location.rs  name.rs  parse.rs  structure.rs  token.rs  types.rs  util.rs
parser/tests/: example.rs
proxy/: README.md  envoy.yaml
server/: Makefile  README.md  docker-compose.yaml
src/: cli.rs  command.rs  compiler.rs  main.rs  plugin.rs  sysdc.rs
src/cli/: exec.rs  interactive.rs  parse.rs  plugin.rs  tool.rs
src/command/: cli.rs  plugin.rs
src/compiler/: check.rs  error.rs  name.rs  parse.rs  structure.rs  token.rs  types.rs
src/parser/: check.rs  error.rs
src/sysdc/: tokenize.rs
std/tool/: Makefile
std/tool/check/wasm/: Cargo.toml  Makefile
std/tool/check/wasm/src/: commands.rs
std/tool/check/wasm/src/commands/: flistup.rs  trace.rs
std/tool/eval/wasm/: .gitignore  Cargo.toml  Dockerfile  Makefile
std/tool/eval/wasm/src/: commands.rs  lib.rs
std/tool/eval/wasm/src/commands/: basic.rs  complex.rs  duplication.rs
tool/delivery/: Cargo.toml  Dockerfile
tools/debug/: Cargo.toml  README.md
tools/json/: Cargo.toml  README.md
tools/tool/: Cargo.toml
tools/view/: .gitignore  Makefile  README.md  next.config.js  package-lock.json  package.json
tools/view/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tools/view/src-tauri/src/: command.rs  lib.rs  react_flow.rs
tools/view/src-tauri/src/command/: gen_flow.rs  simple.rs
top/: nginx.conf
top/static/: index.html
webapp/: Makefile  README.md  docker-compose.yaml
(+174 files in other folders)
