[package]
name = "sysdc_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.143"
serde_json = "1.0.83"
rmp-serde = "1.1.0"
clap = { version = "3.2.7", features = ["derive"] }
glob = "0.3.0"
anyhow = { version = "1.0.64", features = ["backtrace"] }
thiserror = "1.0.34"
sysdc_core = { path = "../core" }
sysdc_tool_runner = { path = "tool_runner/src-tauri" }

[workspace]
members = [
   "tool_runner/src-tauri"
]
