[package]
name = "sysdc_tool_view"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
anyhow = "1.0.65"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.3", features = ["api-all", "native-tls-vendored"] }
once_cell = "1.14.0"
sysdc_parser = { path = "../../../parser" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
