[package]
name = "sysdc_tool_check"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.65"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.14.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
sysdc_core = { path = "./core" }
