[package]
name = "sysdc_tool_eval"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.65"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.14.0"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
sysdc_core = { path = "./core" }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
